# ece421prj3

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  Trunk.toml  create_local_db.sh  diesel.toml  main.js
app/: index.html  main.js
doc/: .gitignore  design.tex
migrations/2022-03-24-004822_create_database/: up.sql
migrations/2022-03-24-194858_create_match_results_table/: down.sql  up.sql
prj3_cli/: Cargo.toml
prj3_cli/src/: main.rs  menus.rs  types.rs
prj3_client/: Cargo.toml  index.html  index.scss
prj3_client/src/: apis.rs  app.rs  main.rs
prj3_client/src/components/: connect_4_play.rs  game_setup.rs  mod.rs  play_screen.rs  radio_group.rs
prj3_client/src/game/: board.rs  mod.rs  slot.rs
prj3_client/src/mutations/: auth.rs  match_records.rs  mod.rs  util.rs
prj3_client/src/pages/: TOOT_setup.rs  connect_4.rs  connect_4_setup.rs  home.rs  leaderboard.rs  login.rs  mod.rs  toot.rs  toot_setup.rs
prj3_client/src/services/: auth.rs  util.rs
prj3_client/src/stores/: auth.rs
prj3_server/: Cargo.toml
prj3_server/src/: main.rs  routes.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs  models.rs  queries.rs  schema.rs  types.rs
sql/: create.sql
src/: client.rs  lib.rs  main.rs
src/client/: app.rs
src/server/: database.rs  forms.rs  mod.rs  models.rs  requests.rs  routes.rs  schema.rs  types.rs  user.rs
