[package]
name = "project3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"

[target.'cfg(not(target_family="wasm"))'.dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.10"

[lib]
path = "src/client.rs"
crate-type = ["cdylib"]
