[package]
name = "prj3_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_types = { path = "../shared_types", features = ["database", "run_migrations", "manual_auth_token"] }
terminal-menu = "2.0.2"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["sqlite"] }
ansi_term = "0.12"
