[package]
name = "prj3_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
shared_types = { path = "../shared_types" }
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
web-sys = { version = "0.3.56", features = ["Window", "Location", "FormData", "HtmlFormElement"] }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-cookies = "0.1.0"
bounce = { version = "0.2.0", features = ["query"] }
async-trait = "0.1.53"