[package]
name = "prj3_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_sqlite_pool"] }
diesel = { version = "1.4.5", features = ["sqlite"] }
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.5"

shared_types = { path = "../shared_types", features = ["rocket", "database"] }

[features]
build_database = ["shared_types/run_migrations"]